--- a/parabens.html
+++ b/parabens.html
@@ -13,6 +13,7 @@
             text-align: center;
             align-items: center;
             justify-content: center;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
         h1{
             color: rgb(211, 3, 3);
@@ -25,15 +26,34 @@
         }
         button{
             border-radius: 6px;
-            border: 1.5px solid rgb(211, 3, 3);
+            border: 2px solid rgb(211, 3, 3);
             background-color: rgb(255, 182, 194);
             margin-top: 30px;
             margin-bottom: 50px;
+            width: 230px;
+            height: 50px;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
-
+        button:hover{
+            background-color: rgb(211, 3, 3);
+            scale: 1.07;
+            color: rgb(255, 182, 194);
+            transition: 0.6s;
+            font-weight: 900;
+        }
     </style>
 </head>
 <body>
-    <h1></h1>
+    <h1>NÓS TE AMAMOS DEMAIS E COM TANTO AMOR QUEREMOS CRIAR NOVAS MEMÓRIAS JUNTOS</h1>
+    <img src="15.jpeg" alt="">
+    <h1>ENTÃO</h1>
+    <h1>SEM MAIS DELONGAS</h1>
+    <img src="16.jpeg" alt="">
+    <h1>VOCÊ GANHOU...</h1>
+    <img src="17.jpeg" alt="">
+    <h1>UM FINAL DE SEMANA EM FAMÍLIA</h1>
+    <h1>EM SÃO PAULO</h1>
+    <h1>NOS DIAS 24 E 25 DE JUNHO</h1>
+    <h1>TE AMAMOS MUITOOOO</h1>
 </body>
 </html>
