--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             text-align: center;
             align-items: center;
             justify-content: center;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
         h1{
             color: rgb(211, 3, 3);
@@ -25,12 +26,21 @@
         }
         button{
             border-radius: 6px;
-            border: 1.5px solid rgb(211, 3, 3);
+            border: 2px solid rgb(211, 3, 3);
             background-color: rgb(255, 182, 194);
             margin-top: 30px;
             margin-bottom: 50px;
+            width: 230px;
+            height: 50px;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
-
+        button:hover{
+            background-color: rgb(211, 3, 3);
+            scale: 1.07;
+            color: rgb(255, 182, 194);
+            transition: 0.6s;
+            font-weight: 900;
+        }
     </style>
 </head>
 <body>
@@ -56,7 +66,7 @@
     <img src="10.jpeg" alt="">
     <h1>LEMBRANÇAS QUE NÃO ACABAM!</h1>
     <img src="11.jpeg" alt="">
-<h1>QUANTO ENROLAÇÃO NÃO É MESMO?</h1>
+<h1>QUANTA ENROLAÇÃO NÃO É MESMO?</h1>
 <img src="12.jpeg" alt="">
 <h1>ACHO QUE JÁ TA HORA!!</h1>
 <img src="13.jpeg" alt="">
